# pyILQR

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pyilqr/: costs.py  dynamics.py  example_costs.py  example_dyanmics.py  example_dynamics.py  ilqr.py  lqr.py  ocp.py  receding_horizon.py  strategies.py
tests/: test_costs.py  test_example_dynamics.py  test_ilqr.py  test_lqr.py  test_pyilqr.py  test_receding_horizon.py
