[tool.poetry]
name = "pyILQR"
version = "0.1.0"
description = ""
authors = ["lassepe <lasse.peters@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
matplotlib = "^3.4.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.pytest.ini_options]
addopts = "--cov=pyilqr"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
